--- a/index.css
+++ b/index.css
@@ -17,6 +17,10 @@
   padding: 20px 25px;
   cursor: pointer;
 }
+.small_text_mid_color {
+  font-size: small;
+  color: #727272;
+}
 
 /* header style */
 header {
@@ -91,6 +95,47 @@ main {
   font-size: small;
   color: #131313b2;
 }
+/* feature section */
+.mid_featuress {
+  margin-top: 130px;
+  gap: 146px;
+  display: flex;
+}
+.mid_featuress .enjoy {
+  border-left: 5px solid #f38405;
+  padding-left: 20px;
+}
+
+.mid_featuress_content .card {
+  padding: 30px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  background: #eff3f3;
+  box-shadow: 0px, 4px, 30px, 0px rgba(0, 0, 0, 0.06);
+}
+
+.mid_featuress_img img {
+  height: 90%;
+  margin-left: 90px;
+}
+
+.ten_year_badge {
+  background-color: #f38405;
+  color: #eff3f3;
+  border-radius: 9px;
+  width: 340px;
+  padding: 40px;
+  text-align: center;
+  position: relative;
+  bottom: 100px;
+}
+.ten_year_badge h2 {
+  font-size: 4rem;
+  margin: 0;
+}
+.ten_year_badge {
+  font-size: 1.5rem;
+}
 
 /* fact section */
 
@@ -160,9 +205,19 @@ main {
   nav,
   .teams_container,
   .facts_card_container,
-  .sponser_img_container {
+  .sponser_img_container,
+  .mid_featuress {
     flex-direction: column;
   }
+  .mid_featuress_img img {
+    width: 90%;
+    margin-left: 0;
+  }
+  .ten_year_badge {
+    position: static;
+    max-width: 300px;
+  }
+
   .teams_img_container {
     grid-template-columns: 1fr;
   }
@@ -179,7 +234,8 @@ main {
 @media screen and (min-width: 576px) and (max-width: 960px) {
   nav,
   .teams_container,
-  .sponser_img_container {
+  .sponser_img_container,
+  .mid_featuress {
     flex-direction: column;
   }
   header {
